--- a/project.json
+++ b/project.json
@@ -5,13 +5,15 @@
         "author": "Sander Mertens",
         "description": "ECS example that demonstrates collision detection",
         "use": [
-            "reflecs",
-            "reflecs.components.transform",
-            "reflecs.components.physics",
-            "reflecs.components.geometry",
-            "reflecs.components.graphics",
-            "reflecs.systems.physics",
-            "reflecs.systems.sdl2"
+            "flecs",
+            "flecs.components.transform",
+            "flecs.components.physics",
+            "flecs.components.geometry",
+            "flecs.components.graphics",
+            "flecs.systems.physics",
+            "flecs.systems.sdl2",
+            "flecs.systems.civetweb",
+            "flecs.systems.admin"
         ]
     }
 }
